Update new tutorial

--- a/E2-Hello World Automation/1.1 Hello World Workflow.md
+++ b/E2-Hello World Automation/1.1 Hello World Workflow.md
@@ -27,5 +27,6 @@ A23. Sample Run The project with your data | ![Sample Run](Images/SampleRunHello
 A24. Switch to SAP Process Automation Lobby, open My Inbox | ![Open MyInbox](Images/OpenMyInbox.png)
 A25. Review Inbox View of your form details. You have options like **Approve** or **Reject** or **Show Log** | ![Review Inbox](Images/InboxView.png)
 A26. For Demonstration, you can click on Approve and close the business process. |
+A27. Switch to SAP Process Automation Lobby, go to Monitor tab, Expand on Monitor, click on Process and Automation Instances. in the bottom, select the filter, within status, ensure Completed is selected. | ![Review Business Process Status](Images/AdministratorView.png)
 
 **END**
