--- a/E2-Hello World Automation/1.2 Hello World Workflow Continued.md
+++ b/E2-Hello World Automation/1.2 Hello World Workflow Continued.md
@@ -2,26 +2,26 @@ This Hello World Project is to introduce you various components of SAP Process A
 
 Instructions | Image
 ------------ | -----
-1. Open the editable version of the project, switch to the Business Process. | ![](Images/OpenTheEditableVersion.png)
-2. Add a Decision between Request and Approval Forms | ![](Images/AddADecision.png)
-3. Give a name to this decision  | ![](Images/NameTheDecision.png)
-4. Decisions are based on data types. Let us create a Requester DataType | ![](Images/AddADataType.png)
-5. Name the Data Type | ![](Images/NameTheDataType.png)
-6. Add Fields to this newly created Data Type | ![](Images/AddFieldsToDataType.png)
-7. Switch to Hello World Decision | ![](Images/OpenHelloWorldDecision.png)
-8. In the decision view, add required input parameters. Switch to the Rules Tab in the end. | ![](Images/AddDecisionInputParameters.png)
-9. Now Add a Rule to the Decision. | ![](Images/AddARuleToTheDecision.png)
-10. Name the Rule within the decision, Select Text Decision | ![](Images/NameTheRuleInDecision.png)
-11. Pick rule_output as result vocabulary. Select FullName Field as the field. Click Next and Create the rule. | ![](Images/AddConfigureResultsInDecision.png)
-12. It will present an IF / Else Text Rule template. Use true for the **If** Clause | ![](Images/CreateBusinessDecision_1_2.png)
-13. You can use the helper function, locate **CONCAT** Function under Advanced Functions, select the **Salutations, FirstName, LastName** fields | ![](Images/CreateBusinessDecision_2_2.png)
-14. You can pick your function or fields easily using the helper popup | ![](Images/DecisionHelperRoutine.png)
-15. Switch to the Business Process Tab, select the newly added Decision entity, map the fields | ![](Images/ConfigureHelloWorldDecision.png)
-16. This also warrants a change in Approval Form Input. We need it to take the output of decision | ![](Images/MapRightFieldInApprovalForm.png)
-17. Save all the artifacts, release the project again. As it is small change, we will consider it as **Consider Only Patches** | ![](Images/ReleaseAgainProject.png)
-18. Deploy the project |
-19. Open the business process from the deployed project, click the request form and copy the form link url to open in a new browser tab.  | ![](Images/OpenTheFormLinkURL2.png)
-20. Submit with a sample details and submit |
-21. Switch to Lobby, open my inbox. you will see the work of the decision. it can be better with few spaces :-) | ![](Images/OpenMyInbox2.png)
+B1. Open the editable version of the project, switch to the Business Process. | ![](Images/OpenTheEditableVersion.png)
+B2. Add a Decision between Request and Approval Forms | ![](Images/AddADecision.png)
+B3. Give a name to this decision  | ![](Images/NameTheDecision.png)
+B4. Decisions are based on data types. Let us create a Requester DataType | ![](Images/AddADataType.png)
+B5. Name the Data Type | ![](Images/NameTheDataType.png)
+B6. Add Fields to this newly created Data Type | ![](Images/AddFieldsToDataType.png)
+B7. Switch to Hello World Decision | ![](Images/OpenHelloWorldDecision.png)
+B8. In the decision view, add required input parameters. Switch to the Rules Tab in the end. | ![](Images/AddDecisionInputParameters.png)
+B9. Now Add a Rule to the Decision. | ![](Images/AddARuleToTheDecision.png)
+B10. Name the Rule within the decision, Select Text Decision | ![](Images/NameTheRuleInDecision.png)
+B11. Pick rule_output as result vocabulary. Select FullName Field as the field. Click Next and Create the rule. | ![](Images/AddConfigureResultsInDecision.png)
+B12. It will present an IF / Else Text Rule template. Use true for the **If** Clause | ![](Images/CreateBusinessDecision_1_2.png)
+B13. You can use the helper function, locate **CONCAT** Function under Advanced Functions, select the **Salutations, FirstName, LastName** fields | ![](Images/CreateBusinessDecision_2_2.png)
+B14. You can pick your function or fields easily using the helper popup | ![](Images/DecisionHelperRoutine.png)
+B15. Switch to the Business Process Tab, select the newly added Decision entity, map the fields | ![](Images/ConfigureHelloWorldDecision.png)
+B16. This also warrants a change in Approval Form Input. We need it to take the output of decision | ![](Images/MapRightFieldInApprovalForm.png)
+B17. Save all the artifacts, release the project again. As it is small change, we will consider it as **Consider Only Patches** | ![](Images/ReleaseAgainProject.png)
+B18. Deploy the project |
+B19. Open the business process from the deployed project, click the request form and copy the form link url to open in a new browser tab.  | ![](Images/OpenTheFormLinkURL2.png)
+B20. Submit with a sample details and submit |
+B21. Switch to Lobby, open my inbox. you will see the work of the decision. it can be better with few spaces :-) | ![](Images/OpenMyInbox2.png)
 
 **END**
