--- a/E3-Download Automation from Store/3.1 Offer Letter Automation.md
+++ b/E3-Download Automation from Store/3.1 Offer Letter Automation.md
@@ -25,7 +25,7 @@ Instructions to download Automations from SAP Process Automation Store
 ![Add Automation from Store!](Images/AddAutomationFromtheStore.png)
 
 5. You can also review the description by clicking **More Information**  and details about the automations and click the Add button with in the Automation details page.
-![Add Offer Letter Automation!](Images/AddPreScreenAutomation2.png)
+![Add Offer Letter Automation!](Images/StoreMoreInformation.png)
 6. After few seconds downloaded project is accessible from the lobby, Like other Store content, each project consists of relevant screen captures, automations, templated excel files (if applicable) and relevant configuration documentations and other general documentations.
 7. From within the project we will explore the files it contains, locate the  SAP Process Automation Configuration files (1) and SuccessFactors Configuration file (2) and download it from the detail page to your local computer.
 
@@ -54,7 +54,7 @@ botStep| Applicant status where candidates will be placed to be picked up by the
 OfferType| Offer type the bot will send. Options are: 1) Online offer (2) Verbal offer (3) Email as text (4) Email as PDF attachment |String | Online offer | Required
 sfurl| SuccesFactors application URL |String | [https:/salesdemo4.successfactors.com/!](https:/salesdemo4.successfactors.com/)| Required
 outputFolderPath| Folder Path to save bot execution logfile |String | C:\Temp| Optional
-logEmail| Email that will receive bot execution logs |String | [sfadminEmail@bestRunSAP.com!](mailto:sfadminEmail@bestRunSAP.com)| Optional
+logEmail| Email that will receive bot execution logs |String | ![sfadminEmail@bestRunSAP.com !](mailto:sfadminEmail@bestRunSAP.com)| Optional
 inputFilePathSFOfferLetter| Input File Path (Only required when you are triggering SF_Offer_Letter_UI_Only_Start Automation) |String | C:\Temp\Input\file.xlsx| Optional
 #### 11. Start Deployment
 
@@ -63,6 +63,7 @@ From the project screen, click the Deploy button
 ![!](Images/OfferLetterProjectOverview.png)
 
 #### 12. Deploy Automation & Configure variables
+Use the values provided to you. In case you decide to use your own SF tenant, the values are based on your SuccessFactors tenant configurations.
 ![!](Images/DeployOfferLetterAutomation.png)
 
 
