--- a/E3-Download Automation from Store/3.1 Offer Letter Automation.md
+++ b/E3-Download Automation from Store/3.1 Offer Letter Automation.md
@@ -1,17 +1,16 @@
 In the next series of tasks, you will download the automations from the SAP Process Automation Store and execute them.
 
 >What is SAP Process Automation Store?
+>
 >The Store is available for everyone and can be accessed directly from the SAP Process Automation product home page within the product. The store offers prebuilt content created and curated by SAP which can be used free of charge with SAP Process Automation. Any automations built by SAP Partners and accessed through the store will have to be purchased as per the invidiual automations terms and conditions laid out in SAP Store & by the SAP Partner. The store also offers a variety of filters, a search feature, and content descriptions to help users find what they are looking for quickly.
+>
 >For more information, please refer to our documentation [page!](https:/help.sap.com/docs/PROCESS_AUTOMATION/527c579a1cba4f12b45326c8e890d102/8324854ae0ba400296ee384d35f95235.html?locale=en-US)
 
 Explore the store as described in the documentation page [Explore the Store | SAP Help Portal!](https:/help.sap.com/docs/PROCESS_AUTOMATION/527c579a1cba4f12b45326c8e890d102/b38897b821874ebe98fb15fc7d4400e9.html?locale=en-US))
 
-We will be using couple of Automations from the SAP Process Automation Store
+For this tutorial, We will be using **Offer Letter Distribution - SuccessFactors** Automation from the SAP Process Automation Store
 
-1. Screening Questions(API) -SuccessFactors
-2. Offer Letter Distribution - SuccessFactors
-
-Instructions to download Automations from SAP Process Automation Store
+Here are the instructions to download Automations from SAP Process Automation Store
 
 1. From your Sub account, go to Instances and Subscriptions menu (1),
 2. Launch SAP Process Automation (2) by clicking the name or the icon beside it ![Launch SAP Process Automation !!](Images/LaunchSPA.png)
