fix hyperlink format

--- a/E5-Using SuccessFactor API with SAP Process Automation/5.1 Using SuccessFactors API.md
+++ b/E5-Using SuccessFactor API with SAP Process Automation/5.1 Using SuccessFactors API.md
@@ -1,16 +1,16 @@
 For this tutorial, we will be using the below APIs from SAP API Business Hub
 
-Employment Information ![Employment Information](https://api.sap.com/api/ECEmploymentInformation/overview)
-Personal Information ![Personal Information](https://api.sap.com/api/ECPersonalInformation/overview)
+Employment Information [Employment Information](https://api.sap.com/api/ECEmploymentInformation/overview)
+Personal Information [Personal Information](https://api.sap.com/api/ECPersonalInformation/overview)
 
 You also need to be familiar to What is an Actions Project.
-Kindly refer to our documentation ![Actions Project from SAP Help](https://help.sap.com/docs/PROCESS_AUTOMATION/a331c4ef0a9d48a89c779fd449c022e7/609538e04bc843d887011765c14ecdda.html)
+Kindly refer to our documentation [Actions Project from SAP Help](https://help.sap.com/docs/PROCESS_AUTOMATION/a331c4ef0a9d48a89c779fd449c022e7/609538e04bc843d887011765c14ecdda.html)
 and few community resources below
 
-* SAP Process Automation – Your first simple Action Project: End to End ![](https://blogs.sap.com/2022/10/21/sap-process-automation-your-first-simple-action-project-end-to-end/)
-* Connect to External Systems using Actions in SAP Process Automation ![](https://blogs.sap.com/2022/10/21/connect-to-external-systems-using-actions-in-sap-process-automation/)
-* SAP Process Automation – Consume APIs with ‘no-code’ using Actions ![](https://blogs.sap.com/2022/10/21/sap-process-automation-consume-apis-with-using-actions/)
-* The New Actions Project – Major Changes including the Actions Editor Available Now !! ![](https://blogs.sap.com/2022/10/19/the-new-actions-project-major-changes-including-the-actions-editor-available-now/)
+* SAP Process Automation – Your first simple Action Project: End to End [](https://blogs.sap.com/2022/10/21/sap-process-automation-your-first-simple-action-project-end-to-end/)
+* Connect to External Systems using Actions in SAP Process Automation [](https://blogs.sap.com/2022/10/21/connect-to-external-systems-using-actions-in-sap-process-automation/)
+* SAP Process Automation – Consume APIs with ‘no-code’ using Actions [](https://blogs.sap.com/2022/10/21/sap-process-automation-consume-apis-with-using-actions/)
+* The New Actions Project – Major Changes including the Actions Editor Available Now !! [](https://blogs.sap.com/2022/10/19/the-new-actions-project-major-changes-including-the-actions-editor-available-now/)
 
 Instructions | Image
 ------------ | -----
