--- a/E4-How to use Recorder with SAP Process Automation/4.1 Recorder Basics with Process Automation.md
+++ b/E4-How to use Recorder with SAP Process Automation/4.1 Recorder Basics with Process Automation.md
@@ -4,7 +4,14 @@ In this tutorial, we will be covering basics of SAP Process Automation - Automat
 
 Review the below video and follow it step by step to understand how the functionality works
 
+![](Tutorial-How to use Recorder Automatic Capture Functionality.mp4)
 
 ###Tutorial - How to use Capture - On - Hover Recorder Capability
 
 Review the below video and follow it step by step to understand how the functionality works
+
+![](Tutorial - How to use Recorder Capture on Hover.mp4)
+
+###Main Recorder Tutorial
+
+![](Main Recorder Tutorial.mp4)
