--- a/E4-How to use Recorder with SAP Process Automation/4.1 Recorder Basics with Process Automation.md
+++ b/E4-How to use Recorder with SAP Process Automation/4.1 Recorder Basics with Process Automation.md
@@ -4,7 +4,7 @@ In this tutorial, we will be covering basics of SAP Process Automation - Automat
 
 Review the below video and follow it step by step to understand how the functionality works
 
-[![How to use Automatic Recorder Capability]({image-url})]({https://video.sap.com/media/t/1_yku20zqm})
+[![How to use Automatic Recorder Capability]({https://video.sap.com/media/t/1_yku20zqm})
 
 <video width="320" height="240" controls>
   <source src="Tutorial-How to use Recorder Automatic Capture Functionality.mp4" type="video/mp4">
