Upload video with tile image

--- a/E4-How to use Recorder with SAP Process Automation/4.1 Recorder Basics with Process Automation.md
+++ b/E4-How to use Recorder with SAP Process Automation/4.1 Recorder Basics with Process Automation.md
@@ -14,4 +14,4 @@ Review the below video and follow it step by step to understand how the function
 
 ###Main Recorder Tutorial
 
-[![How to use Automatic Recorder Capability]()](https://video.sap.com/media/t/1_gt5mcveg)
+[![How to use Automatic Recorder Capability](Images/SPARecorderv2.png)](https://video.sap.com/media/t/1_gt5mcveg)
