Update video records

--- a/E4-How to use Recorder with SAP Process Automation/4.1 Recorder Basics with Process Automation.md
+++ b/E4-How to use Recorder with SAP Process Automation/4.1 Recorder Basics with Process Automation.md
@@ -4,14 +4,14 @@ In this tutorial, we will be covering basics of SAP Process Automation - Automat
 
 Review the below video and follow it step by step to understand how the functionality works
 
-[![How to use Automatic Recorder Capability]()](https://video.sap.com/media/t/1_6v2e5ahu)
+[![How to use Automatic Recorder Capability](Images/SPATutorial_AutomaticRecording.png)](https://video.sap.com/media/t/1_6v2e5ahu)
 
 ###Tutorial - How to use Capture - On - Hover Recorder Capability
 
 Review the below video and follow it step by step to understand how the functionality works
 
-[![How to use Automatic Recorder Capability]()](https://video.sap.com/media/t/1_yku20zqm)
+[![How to use Automatic Recorder Capability](Images/SPATutorial_CaptureOnHoverRecording.png)](https://video.sap.com/media/t/1_yku20zqm)
 
 ###Main Recorder Tutorial
 
-[![How to use Automatic Recorder Capability](Image/SPARecorderv2.png)](https://video.sap.com/media/t/1_gt5mcveg)
+[![How to use Automatic Recorder Capability](Images/SPARecorderv2.png)](https://video.sap.com/media/t/1_gt5mcveg)
