--- a/E4-How to use Recorder with SAP Process Automation/4.1 Recorder Basics with Process Automation.md
+++ b/E4-How to use Recorder with SAP Process Automation/4.1 Recorder Basics with Process Automation.md
@@ -11,7 +11,7 @@ Click the image below to access the tutorial video and follow it step by step to
 
 Click the image below to access the tutorial video and follow it step by step to understand how the functionality works
 
-![![How to use Automatic Recorder Capability](Images/CaptureOnHoverRecording.png)](https://video.sap.com/media/t/1_yku20zqm)|
+|[![How to use Automatic Recorder Capability](Images/CaptureOnHoverRecording.png)](https://video.sap.com/media/t/1_yku20zqm)|
 -
 
 ###Main Recorder Tutorial Video
