--- a/S4HANA_SPA/E2-Hello World Automation/1.4 HelloWorld Miscallaneous.md
+++ b/S4HANA_SPA/E2-Hello World Automation/1.4 HelloWorld Miscallaneous.md
@@ -1,7 +1,7 @@
 
 Instructions | Image
 ------------ | -----
-B1.  Click the wheel icon | ![Click the Wheel Icon !](E1-Hello%20World/Images/SettingsIcon.png)
+B1.  Click the wheel icon | ![Click the Wheel Icon !](Images/SettingsIcon.png)
 B2.  Select **Environment Variables** on left side menu option (1) and click **Create** Button | ![Create a new Environment Variable!](Images/ClickCreateMenu.png)
 B3.  Enter a variable **name**, give a **description** and select variable type as **String** | ![Enter Variable Metadata!](Images/VariableMetadata.png)
 B4.  Click Close button | ![Click Close Button!](Images/ClickCloseButton.png)
