--- a/S4HANA_SPA/E4-BAPI/E5.1 Execute Basic BAPI.md
+++ b/S4HANA_SPA/E4-BAPI/E5.1 Execute Basic BAPI.md
@@ -11,7 +11,7 @@ L7. Create new data types as shown in the diagram. these are the input value for
 L8. Add the field type into the flow | ![add input to the field!](Images/AddInputFieldType.png)
 L9. Create a Custom Data of this data type | ![Create a Custom Data!](Images/CreateCustomData.png)
 L10. For this exercise, we will query TEST as Material Value |
-L11. Add **Execute BAPI** activity to the flow. and specify the funtion module, its input and the SAP Connection objects | ![Add Execute BAPI activity!](Images/AddExecuteBAPI.png)
+L11. Add **Execute BAPI** activity to the flow. and specify the function module, its input and the SAP Connection objects | ![Add Execute BAPI activity!](Images/AddExecuteBAPI.png)
 L12. Print the BAPI Response | ![Log BAPI Response!](Images/LogBAPIResponse.png)
 L13. Close the BAPI Connection | ![Close SAP Connection!](Images/CloseSAPConnection.png)
 L14. You can save and execute this BAPI project and validate the response |
